# bidviz

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.py
.github/workflows/: docs.yml  publish.yml  tests.yml
bidviz/: __init__.py  exceptions.py  transformer.py  utils.py
bidviz/core/: __init__.py  base.py
bidviz/transformers/: __init__.py  bar.py  heatmap.py  kpi.py  line.py  other.py  pie.py  table.py
bidviz_polars/: __init__.py  transformer.py  utils.py
bidviz_polars/core/: __init__.py  base.py
bidviz_polars/transformers/: __init__.py  bar.py  heatmap.py  kpi.py  line.py  other.py  pie.py  table.py
examples/: basic_usage.py  fastapi_integration.py  polars_basic_usage.py  polars_fastapi_integration.py
tests/: conftest.py  test_exceptions.py  test_polars_transformer.py  test_polars_utils.py  test_transformer.py  test_utils.py
